--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -8,42 +8,62 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css"/>
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true"/>
     <link rel="stylesheet" href="~/desafio_paises.styles.css" asp-append-version="true"/>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 </head>
 <body>
 <header>
-    <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+    <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-dark border-bottom box-shadow mb-3">
         <div class="container-fluid">
+            <a class="navbar-brand d-flex align-items-center" asp-area="" asp-controller="Paises" asp-action="Index">
+                <i class="bi bi-globe-americas me-2"></i>
+                <span class="fw-bold">Gestão de Países</span>
+            </a>
+
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse"
                     aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
-                <ul class="navbar-nav flex-grow-1">
+
+            <div class="navbar-collapse collapse d-sm-inline-flex">
+                <ul class="navbar-nav ms-auto mb-2 mb-sm-0 align-items-center">
                     <li class="nav-item">
-                        <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Sobre</a>
+                        <a class="nav-link text-light" asp-area="" asp-controller="Home" asp-action="Index">
+                            Sobre
+                        </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-dark" asp-area="" asp-controller="Paises" asp-action="Index">Lista de
-                            Países</a>
+                        <a class="nav-link text-light" asp-area="" asp-controller="Paises" asp-action="Index">
+                            Lista de Países
+                        </a>
                     </li>
+                    <li class="nav-item me-3"><a class="nav-link text-light" asp-area="" asp-controller="Home"
+                                                 asp-action="Privacy">
+                            Privacidade
+                        </a>
+                    </li>
+
                     <li class="nav-item">
-                        <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                        <a href="https://github.com/thales-vaz-sousa" target="_blank"
+                           class="nav-link text-light fs-4 p-0" title="Ver meu GitHub">
+                            <i class="bi bi-github"></i>
+                        </a>
                     </li>
                 </ul>
             </div>
         </div>
     </nav>
 </header>
+
 <div class="container">
     <main role="main" class="pb-3">
         @RenderBody()
     </main>
 </div>
 
-<footer class="border-top footer text-muted">
+<footer class="border-top-8 footer text-light bg-dark mt-7 py-0">
     <div class="container d-flex justify-content-center align-items-center">
-        &copy; 2026 - Desafio Paises v0.1 by Thales Vaz
+        <span class="small opacity-75">&copy; 2026 - Desafio Paises v0.1 by Thales Vaz</span>
     </div>
 </footer>
 <script src="~/lib/jquery/dist/jquery.min.js"></script>
