--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -8,5 +8,6 @@
     <br/>
     <img src="https://cdn.pixabay.com/photo/2020/06/22/04/20/earth-5327559_1280.png" 
          alt="Planeta Terra" 
-         width="300">
+         width="300"
+         style=" filter: grayscale(100%)">
 </div>
